sites/all/themes/msd2014/css/msd2014-extra.css
/*
Various fixes and alterations to provided CSS to make compatible with Drupal implentation.
*/

#footernav {
	top:0em !important;
}

body .main-block, body.headingblock .main-block {
	padding:0px;
}

.wrapper {
    padding: 0px;
    width:1024px
}

div.tabs {
    float:right;
}

body > div.tabs {
    margin:10px 10px 0px 0px;
}

ul.nice-menu li {
	background: #000000;
}

ul.nice-menu-down li.menuparent,
ul.nice-menu-down li li.menuparent {
  background: #000;
}

ul.nice-menu-down li.menuparent:hover,
ul.nice-menu-down li li.menuparent:hover {
  background: #000;
}

ul.nice-menu-down > li > a {
	text-transform:uppercase;
}

ul.nice-menu-down li {
	border: none;
}

ul.nice-menu,
ul.nice-menu ul {
	border: none;
}

a {
    color: #4C5E71;
}

div.view {
	padding-top:0px !important;
}

.thecrumb {
	margin-top:14px;
	margin-bottom:10px;
}

.content-white-wrap .thecrumb a {
	color:#3CA9C2;
	text-decoration:none;
}

.content-white-wrap .thecrumb span {
	color:#79797A;
}

.content-black-wrap .thecrumb {
	color:#B2B2B2;
}

.content-black-wrap .thecrumb a {
	color:#3CA9C2;
	text-decoration:none;
}

.content-black-wrap .thecrumb span {
	color:#B2B2B2;
}

.content-black-wrap .thecrumb a:hover {
	text-decoration:none;
}

div.messages {
    margin: 6px 32px;
}

#cssmenu > ul > li > a {
    text-transform: uppercase;
}

div.module-wrap h2 {
    text-transform: uppercase;
}

div.sharethis-wrapper {
	height:35px;
}

.st_facebook_custom,
.st_twitter_custom,
.st_print_custom,
.st_email_custom,
.st_sharethis_custom 
{
	padding:0px 28px 28px 0;
}

.st_facebook_custom {
	background: url("/sites/all/themes/msd2014/images/fb-sm.gif") no-repeat scroll left top transparent;
}

.st_twitter_custom {
	background: url("/sites/all/themes/msd2014/images/tw-sm.gif") no-repeat scroll left top transparent;
}

.st_print_custom {
	background: url("/sites/all/themes/msd2014/images/prnt-sm.gif") no-repeat scroll left top transparent;
}

.st_email_custom {
	background: url("/sites/all/themes/msd2014/images/email-sm.gif") no-repeat scroll left top transparent;
}

.st_sharethis_custom {
	background: url("/sites/all/themes/msd2014/images/plus-sm.gif") no-repeat scroll left top transparent;
}

.share span {
	opacity:0.6;
	filter:alpha(opacity=60); /* For IE8 and earlier */
}
.share span:hover {
	opacity: 1;
	filter:alpha(opacity=100); /* For IE8 and earlier */
}

.programs-content-right blockquote {
    padding: 0px !important;
}

.programs-content-right p {
    margin-bottom: 0px;
}

